auto(review): checkpoint in-progress review across all features (budget, task, meal, app, res)